<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_24dp"
        android:title="@null" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_24dp"
        android:title="@null" />

    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/ic_friends_24dp"
        android:title="@null" />

</menu>